--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-41XSDFQRHQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-41XSDFQRHQ');
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Pomodoro Timer</title>
@@ -322,7 +332,7 @@
             <div class="footer-links">
                 <div class="footer-column"> <h4>Navigation</h4> <ul> <li><a href="#timer-section">Timer</a></li> <li><a href="#stats-section">Statistics</a></li> <li><a href="#benefits-section">Benefits</a></li> <li><a href="#auth-section">Account</a></li> </ul> </div>
                 <div class="footer-column"> <h4>Resources</h4> <ul> <li><a href="https://en.wikipedia.org/wiki/Pomodoro_Technique" target="_blank" rel="noopener noreferrer">About the Technique</a></li> </ul> </div>
-                <div class="footer-column"> <h4>Connect</h4> <ul> <li><a href="https://github.com/SnipTech1" target="_blank" rel="noopener noreferrer">GitHub</a></li> <li><a href="mailto:naseahmed366@gmail.com">Contact</a></li> </ul> </div>
+                <div class="footer-column"> <h4>Connect</h4> <ul> <li><a href="https://github.com/SnipTech1" target="_blank" rel="noopener noreferrer">GitHub</a></li> <li><a href="mailto:saidzahran68@gmail.com">Contact</a></li> </ul> </div>
             </div>
         </div>
         <div class="footer-bottom"> Copyright © <span id="copyright-year"></span> <a href="https://github.com/SnipTech1/https-studywithmi" target="_blank" rel="noopener noreferrer">sniptech1</a>. All rights reserved. </div>
